--- a/config_sample.env
+++ b/config_sample.env
@@ -1,24 +1,21 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "1989267165:AAF2j7Mfkyxl6lslo2TODIiZaoM8oqVVwgQ"
+GDRIVE_FOLDER_ID = "1JX5uAeyCrYi1KxCF3bMs7c8oi5hAuZoy"
+OWNER_ID = 2087106571
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 8
-AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+AUTO_DELETE_MESSAGE_DURATION = -1
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 8011345
+TELEGRAM_HASH = "c00524107af0143228bc939cf1686783"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""  # Recommend limit status to 4 tasks
+INDEX_URL = "https://psmine.shivankitk13.workers.dev/0:/"
+STATUS_LIMIT = ""  # Recommend https://psmine.shivankitk13.workers.dev/0:/limit status to 4 tasks
 # Leech
 TG_SPLIT_SIZE = ""  # leave it empty for max size (2GB)
 AS_DOCUMENT = ""
@@ -26,9 +23,9 @@ UPTOBOX_TOKEN = ""
 MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
-BLOCK_MEGA_FOLDER = "" 
-BLOCK_MEGA_LINKS = ""
-STOP_DUPLICATE = ""
+BLOCK_MEGA_FOLDER = "False" 
+BLOCK_MEGA_LINKS = "False"
+STOP_DUPLICATE = "True"
 RECURSIVE_SEARCH = ""  # Search in Subfolders (only for teamdriveid or root, you can't with folderid)
 SHORTENER = ""
 SHORTENER_API = ""
@@ -42,7 +39,7 @@ ACCOUNTS_ZIP_URL = ""
 TOKEN_PICKLE_URL = ""
 MULTI_SEARCH_URL = ""  # You can use gist raw link (remove commit id from the link, like config raw link check Heroku guide)
 # To use limit leave space between number and unit. Available units is (gb or GB, tb or TB)
-TORRENT_DIRECT_LIMIT = ""
+TORRENT_DIRECT_LIMIT = "100 GB"
 TAR_UNZIP_LIMIT = ""
 CLONE_LIMIT = ""  
 MEGA_LIMIT = ""
